--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     June 30, 2024
                 </div>
                 <div class="tbl-hitam">
-                    <a href="">Open The Invitation</a>
+                    <a href="page-utama.html">Open The Invitation</a>
                 </div>
             </div>
         </div>
