--- a/page-utama.html
+++ b/page-utama.html
@@ -40,6 +40,7 @@
                     </div>
                 </div>
                 <p class="scroll">Scroll Down</p>
+                <p>test texting</p>
             </div>
         </div>
         <div class="box2"></div>
