--- a/page-utama.html
+++ b/page-utama.html
@@ -31,7 +31,7 @@
         <div class="box">
             <div class="container1-1">
                 <p class="judul">Wedding Invitation</p>
-                <p class="pengantin">Ryan & Yanti test text hilang</p>
+                <p class="pengantin">Ryan & Yanti</p>
                 <p class="tanggal">June 30, 2024</p>
                 <a href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=Mm4ycjduc2JwcWo0cnJqaXQ1bXJ1NDJxcDIgcnlhbnJpeWFkaTloQG0&tmsrc=ryanriyadi9h%40gmail.com" target="_blank" class="buka-undangan">Save the Date</a>
                 <div class="d-flex justify-content-center align-items-center mt-4 mb-2">
@@ -40,7 +40,6 @@
                     </div>
                 </div>
                 <p class="scroll">Scroll Down</p>
-                <p>test texting</p>
             </div>
         </div>
         <div class="box2"></div>
