--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-page-index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="loader"></div>
     <div class="box1">
         <div class="box1-1">
             <div class="box1-1-1">
@@ -31,5 +32,6 @@
             </div>
         </div>
     </div>
+    <script src="script-page-cover.js"></script>
 </body>
 </html>
