--- a/page-utama.html
+++ b/page-utama.html
@@ -48,7 +48,7 @@
                         June 30, 2024
                     </div>
                     <div class="tbl-hitam">
-                        <a href="" target="_blank">Save The Date</a>
+                        <a href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=Mm4ycjduc2JwcWo0cnJqaXQ1bXJ1NDJxcDIgcnlhbnJpeWFkaTloQG0&tmsrc=ryanriyadi9h%40gmail.com" target="_blank">Save The Date</a>
                     </div>
                     <div class="mousey">
                         <div class="scroller"></div>
