--- a/page-utama.html
+++ b/page-utama.html
@@ -21,13 +21,13 @@
 </head>
 <body>
     <!--untuk fitur musik autoplay-->
-    <div class=""></div>
+    <div class="">loader</div>
     <div class="tombol-musik">
         <button id="play"></button>
         <button id="pause"></button>
     </div>
 
-    <audio id="audioPlayer" controls autoplay loop>
+    <audio id="audioPlayer" loop>
         <source src="music/Backsound.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
