--- a/page-utama.html
+++ b/page-utama.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <!--untuk fitur musik autoplay-->
-    <div class="">loader</div>
+    <div class="loader"></div>
     <div class="tombol-musik">
         <button id="play"></button>
         <button id="pause"></button>
