--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
+    <meta property="og:image" content="image/Foto_Pengantin_Pria.jpeg">
     <title>Ryan & Yanti</title>
     <link rel="stylesheet" href="style-page-index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,6 +27,8 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
+    <div itemprop="image" itemscope="itemscope" itemtype="http://schema.org/ImageObject">
+    <meta content="url_gambar" itemprop='url"/> </div>
 
     <div class="loader"></div>
     <div class="tombol-musik">
