--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-    <meta property="og:image" content="https://img.freepik.com/free-photo/side-view-partners-holding-hands_23-2149523772.jpg?t=st=1718562128~exp=1718565728~hmac=3f1c7777ce0e285bda7e7988de45163b3c503a0f83ed07dbf31ee846cf3d8cdc&w=1800">
+    <meta property="og:image" itemprop="image" content="image/Foto_Pengantin_Pria.jpeg">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+    <meta property="og:title" content="Wedding Invitation Ryan&Yanti"
     <title>Ryan & Yanti</title>
     <link rel="stylesheet" href="style-page-index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
