--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta property="og:image" itemprop="image" content="image/Foto_Pengantin_Pria.jpeg">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
+    <meta property="og:type" content="website">
+    <meta property="og:image:type" content="image/Foto_Pengantin_Pria.jpeg">
     <title>Ryan & Yanti</title>
     <link rel="stylesheet" href="style-page-index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
