--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-    <meta property="og:image" itemprop="image" content="image/Foto_Pengantin_Pria.jpeg">
+    <meta property="og:image" itemprop="image" content="https://ryanriyadi09.github.io/Wedding-Invitation/">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
     <meta property="og:type" content="website">
