--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>The Wedding of Ryan & Yanti</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-    <meta property="og:image" itemprop="image" content="https://ryanriyadi09.github.io/Wedding-Invitation/">
+    <meta property
+
+    
+    <meta property="og:image" content="https://github.com/Ryanriyadi09/Wedding-Invitation/blob/main/image/Foto_Pengantin_Pria.jpeg">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
     <meta property="og:type" content="website">
-    <meta property="og:image:type" content="image/Foto_Pengantin_Pria.jpeg">
-    <title>Ryan & Yanti</title>
+    <meta property="og:image:type" content="image/jpeg">
     <link rel="stylesheet" href="style-page-index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
