--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <title>The Wedding of Ryan & Yanti</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-    <meta property
-
-    
-    <meta property="og:image" content="https://github.com/Ryanriyadi09/Wedding-Invitation/blob/main/image/Foto_Pengantin_Pria.jpeg">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="The Wedding of Ryan & Yanti">
+    <meta property="og:description" content="June 30, 2024">
+    <meta property="og:url" content="https://ryanriyadi09.github.io/Wedding-Invitation/">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Ryanriyadi09/Wedding-Invitation/main/image/Foto_Pengantin_Pria.jpeg">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
-    <meta property="og:type" content="website">
+    <meta property="og:image:alt" content="The Wedding of Ryan & Yanti">
     <meta property="og:image:type" content="image/jpeg">
     <link rel="stylesheet" href="style-page-index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
