--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="The Wedding of Ryan & Yanti">
     <meta property="og:description" content="June 30, 2024">
     <meta property="og:url" content="https://ryanriyadi09.github.io/Wedding-Invitation/">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Ryanriyadi09/Wedding-Invitation/main/image/bg2.jpeg">
+    <meta property="og:image" itemprop="image" content="https://raw.githubusercontent.com/Ryanriyadi09/Wedding-Invitation/main/image/bg2.jpeg">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
     <meta property="og:image:alt" content="The Wedding of Ryan & Yanti">
