--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta property="og:title" content="The Wedding of Ryan & Yanti">
     <meta property="og:description" content="June 30, 2024">
     <meta property="og:url" content="https://ryanriyadi09.github.io/Wedding-Invitation/">
-    <meta property="og:image" itemprop="image" content="https://raw.githubusercontent.com/Ryanriyadi09/Wedding-Invitation/main/image/bg2.jpeg">
+    <meta property="og:image" itemprop="image" content="https://raw.githubusercontent.com/Ryanriyadi09/Wedding-Invitation/main/image/bg6.jpg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
     <meta property="og:image:alt" content="The Wedding of Ryan & Yanti">
-    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:type" content="image/jpg">
     <link rel="stylesheet" href="style-page-index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
