--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="The Wedding of Ryan & Yanti">
     <meta property="og:description" content="June 30, 2024">
     <meta property="og:url" content="https://ryanriyadi09.github.io/Wedding-Invitation/">
-    <meta property="og:image" itemprop="image" content="https://raw.githubusercontent.com/Ryanriyadi09/Wedding-Invitation/main/image/bg6.jpg">
+    <meta property="og:image" itemprop="image" content="https://raw.githubusercontent.com/Ryanriyadi09/Wedding-Invitation/main/image/bg3.jpg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
     <meta property="og:image:alt" content="The Wedding of Ryan & Yanti">
@@ -56,6 +56,10 @@
                     <div class="kalimat3">
                         June 30, 2024
                     </div>
+                    <div class="tamu-undangan">
+                        <p>Kepada Yth: Bapak/Ibu/Saudara/i</p>
+                        <p class="font-tamu-undangan">Keluarga Besar Ryan</p>
+                    </div>
                     <div class="tbl-hitam">
                         <a href="#halaman-1">Open The Invitation</a>
                     </div>
@@ -101,16 +105,14 @@
                             </div>
                             <div class="pengantin">
                                 <div class="pengantin-pria" data-aos="fade-right" data-aos-duration="2000">
-                                    <img src="image/Foto_Pengantin_Pria.jpeg" alt="Foto Pengantin Pria" class="foto-pengantin-pria">
-                                    <p class="font-style">Ryan Riyadi</p>
+                                    <p class="font-style-pengantin-pria">Ryan Riyadi</p>
                                     <p>Putra<br>Bapak Rahmat & Ibu Juriyah</p>
                                 </div>
                                 <div class="dan">
                                     <p>&</p>
                                 </div>
                                 <div class="pengantin-wanita" data-aos="fade-left" data-aos-duration="2000">
-                                    <img src="image/Foto_Pengantin_Wanita.jpeg" alt="Foto Pengantin Wanita" class="foto-pengantin-wanita" width="200px">
-                                    <p class="font-style">Yuliyanti</p>
+                                    <p class="font-style-pengantin-wanita">Yuliyanti</p>
                                     <p>Putri<br>Bapak Didin Permana & Ibu Neng Aminah</p>
                                 </div>
                             </div>
@@ -167,10 +169,12 @@
                         </div>
                                                 
                         <div class="container3-1">
-                            <p>Merupakan suatu kerhomatan dan kebahagiaan bagi kami apabila, Bapak / Ibu / Saudara / i, berkenan hadir untuk memberikan do'a restunya. Atas perhatiannya kami ucapkan terimakasih.</p>
+                            <p>Merupakan suatu kerhomatan dan kebahagiaan bagi kami apabila, Bapak / Ibu / Saudara / i, berkenan hadir untuk memberikan do'a restunya.</p>
+                            <p class="font-style-terimakasih">Ryan & Yanti</p>
+                            <p class="terimakasih">Terima Kasih!</p>
                             <p class="font-style">Wassalamualaikum Warahmatullahi Wabarakatuh</p>
                             <div class="copyright">
-                                Build with &#9829 Yathira
+                                Created by Ryan Riyadi &#9829 Designed by Yuliyanti
                             </div>
                         </div>
                     </div>       
